--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,5 +1,7 @@
 script(type='text/javascript', src='lib/jquery/jquery.min.js')
 
+script(type='text/javascript', src='lib/underscore/underscore.js')
+
 script(type='text/javascript', src='lib/angular/angular.min.js')
 script(type='text/javascript', src='lib/angular-cookies/angular-cookies.min.js')
 script(type='text/javascript', src='lib/angular-resource/angular-resource.min.js')
