--- a/app/views/query/index.jade
+++ b/app/views/query/index.jade
@@ -1,9 +1,23 @@
 h1 Query
 
+h1 Number of terms = {{numberOfTerms}} (Limit 400)
+
+h1(ng-show="editMode") Unsaved 
+br
+button.btn.btn-success(ng-show="editMode", ng-click="submitQuery()") Save Query
+
 table.table
 	thead
 		tr
 			th Query Terms
+			th
 	tbody
-		tr.topics(ng-repeat="term in queryTerms")
-			td {{term}}
+		button.btn.btn-success(ng-hide="addingTerm", ng-click="addTerm()") Add Term
+		tr(ng-repeat="term in queryTerms")
+			td(ng-hide="term.string_edit", ng-click="editTerm(term)") {{term.string}}
+			td(ng-show="term.string_edit || term.string_adding")
+				input(type='text', ng-model='term.string', placeholder='term string')
+
+			td 
+				button.btn.btn-danger(ng-click="deleteTerm(term)") DELETE
+
