Added current configuration to queries index page

--- a/app/views/queries/index.jade
+++ b/app/views/queries/index.jade
@@ -1,5 +1,20 @@
 h1 Query
 
+h2 Current Settings
+table.table
+	thead
+		tr
+			th Key
+			th Value
+	tbody
+		tr(ng-repeat="settingsDataPair in settingsDataPairs")
+			td {{settingsDataPair[0]}}
+			td {{settingsDataPair[1]}}
+
+br
+br
+
+h1 Track Configurations
 table.table
 	thead
 		tr
@@ -11,5 +26,5 @@ table.table
 		tr(ng-repeat="query in queries")
 			td 
 				a(href='/queries/{{query._id}}') {{query._id}}
-			td {{query.created_at}}
+			td {{query.createdAt}}
 			td {{query.terms.join(",")}}
