added authentication for StreamController

--- a/app/views/users/signup.jade
+++ b/app/views/users/signup.jade
@@ -26,4 +26,4 @@ block auth
       button.btn.btn-primary(type='submit') Sign up
       &nbsp;
       | or&nbsp;
-      a.show-login(href="/signin") login
+      a.show-login(href="/signin", target="_self") login
