--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -15,9 +15,11 @@ script(type='text/javascript', src='/js/filters.js')
 
 script(type='text/javascript', src='/js/services/global.js')
 script(type='text/javascript', src='/js/services/articles.js')
-
-
 script(type='text/javascript', src='/js/controllers/queries/index.js')
 script(type='text/javascript', src='/js/controllers/queries/show.js')
+script(type='text/javascript', src='/js/controllers/index.js')	
 script(type='text/javascript', src='/js/controllers/header.js')	
 script(type='text/javascript', src='/js/init.js')
+
+//livereload script rendered 
+script(type='text/javascript', src='http://localhost:35729/livereload.js')	
