--- a/public/views/header.html
+++ b/public/views/header.html
@@ -1,4 +1,4 @@
-<div class="navbar-inner" data-ng-controller="HeaderController" data-ng-init="init()">
+<div class="navbar-inner" data-ng-controller="HeaderController">
 	<ul class="nav">
 		<li><a class="brand" href="/" target="_self">MEAN - A Modern Stack</a></li>
 		<li data-ng-repeat="item in menu" data-ng-show="global.user" data-ng-class="{active: isSelected(item)}"><a href="{{item.link}}">{{item.title}}</a></li>
