--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -1,17 +1,18 @@
-.navbar-inner(data-ng-controller='HeaderController')
-    ul.nav
-        li
-          a.brand(href='/', target='_self') MEAN - A Modern Stack
-        li(data-ng-repeat='item in menu', data-ng-show='global.user', data-ng-class='{active: isSelected(item)}')
-          a(href='{{item.link}}') {{item.title}}
-      ul.nav.pull-right(data-ng-hide='global.authenticated')
-        li
-          a(href='signin', target='_self') Signin
-      ul.nav.pull-right(data-ng-show='global.authenticated')
-        li.dropdown
-          a.dropdown-toggle(href='#', data-toggle='dropdown')
-            | {{global.user.name}}
-            b.caret
-          ul.dropdown-menu
-            li
-              a(href='/signout', target='_self') Signout
+.navbar(data-ng-controller='HeaderController')
+	.navbar-inner
+			ul.nav
+				li
+					a.brand(href='/', target='_self') MEAN - A Modern Stack
+				li(data-ng-repeat='item in menu', data-ng-show='global.user', data-ng-class='{active: isSelected(item)}')
+					a(href='{{item.link}}') {{item.title}}
+			ul.nav.pull-right(data-ng-hide='global.authenticated')
+				li
+					a(href='signin', target='_self') Sign In
+			ul.nav.pull-right(data-ng-show='global.authenticated')
+				li.dropdown
+					a.dropdown-toggle(href='#', data-toggle='dropdown')
+						| {{global.user.name}}
+						b.caret
+					ul.dropdown-menu
+						li
+							a(href='/signout', target='_self') Sign Out
