fixed StreamController flow to work like pluckr

--- a/app/views/users/signin.jade
+++ b/app/views/users/signin.jade
@@ -17,4 +17,4 @@ block auth
       button.btn.btn-primary(type='submit') Sign in
       &nbsp;
       | or&nbsp;
-      a.show-signup(href="/signup", target="_self") Sign up
+      a.show-signup(href="/signup") Sign up
