--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,6 @@
 extends layouts/default
 
 block content
-	script(type="text/javascript").
-		window.user = !{user};
+  section(data-ng-view)
+  script(type="text/javascript").
+    window.user = !{user};
