--- a/public/views/header.html
+++ b/public/views/header.html
@@ -1,19 +1,28 @@
 <div class="navbar-inner" data-ng-controller="HeaderController">
-	<ul class="nav">
-		<li><a class="brand" href="/" target="_self">MEAN - A Modern Stack</a></li>
-		<li data-ng-repeat="item in menu" data-ng-show="global.user" data-ng-class="{active: isSelected(item)}"><a href="{{item.link}}">{{item.title}}</a></li>
-	</ul>
-	<ul class="nav pull-right" data-ng-hide="global.authenticated">
-		<li><a href="signin" target="_self">Signin</a></li>
-	</ul>
-	<ul class="nav pull-right" data-ng-show="global.authenticated">
-		<li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+    
+    <ul class="nav pull-right" data-ng-hide="global.authenticated">
+        
+        <li class="divider-vertical">
+        </li>
+        <li>
+            <a href="signin">Signin</a>
+        </li>
+    </ul>
+    <ul class="nav pull-right" data-ng-show="global.authenticated">
+        <li class="divider-vertical">
+        </li>
+        <li>
+            <a href="/#!/queries">Queries</a>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
 				{{global.user.name}} <b class="caret"></b>
 			</a>
-			<ul class="dropdown-menu">
-				<li ><a href="/signout" target="_self">Signout</a></li>
-			</ul>
-		</li>
-	</ul>
+            
+            <ul class="dropdown-menu">
+                <li><a href="/signout">Signout</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
 </div>
