Added fixed href

--- a/public/views/queries/index.html
+++ b/public/views/queries/index.html
@@ -48,7 +48,7 @@
             <td></td>
           </tr>
           <tr ng-repeat="query in queries">
-            <td><a href="/queries/{{query._id}}">{{query.title}}</a></td>
+            <td><a href="/#!/queries/{{query._id}}">{{query.title}}</a></td>
             <td>{{query.lastRunning}}</td>
             <td>{{query.createdAt}}</td>
             <td>{{query.terms.join(",")}}</td>
