--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -4,6 +4,6 @@ html(lang='en', xmlns='http://www.w3.org/1999/xhtml', xmlns:fb='https://www.face
 	body
 		header.navbar.navbar-fixed-top.navbar-inverse(data-ng-include="'views/header.html'")
 		section.content
-			section.container
+			section.container.app-container
 				block content
 		include ../includes/foot
