--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -15,7 +15,10 @@ h2, h3 {
 th {
   text-transform: uppercase; }
 
-.container {
+.content {
+  margin-top: 80px; }
+
+.app-container {
   background-color: white;
   padding: 40px;
   padding-top: 20px;
