--- a/public/views/header.html
+++ b/public/views/header.html
@@ -1,28 +1,30 @@
 <div class="navbar-inner" data-ng-controller="HeaderController">
-    
-    <ul class="nav pull-right" data-ng-hide="global.authenticated">
-        
-        <li class="divider-vertical">
-        </li>
-        <li>
-            <a href="signin">Signin</a>
-        </li>
-    </ul>
-    <ul class="nav pull-right" data-ng-show="global.authenticated">
-        <li class="divider-vertical">
-        </li>
-        <li>
-            <a href="/#!/queries">Queries</a>
-        </li>
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-				{{global.user.name}} <b class="caret"></b>
-			</a>
+    <div class="container">
+        <a class="brand" href="#">Canvs StreamController</a>
+        <ul class="nav pull-right" data-ng-hide="global.authenticated">
             
-            <ul class="dropdown-menu">
-                <li><a href="/signout">Signout</a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+            <li class="divider-vertical">
+            </li>
+            <li>
+                <a href="signin">Signin</a>
+            </li>
+        </ul>
+        <ul class="nav pull-right" data-ng-show="global.authenticated">
+            <li class="divider-vertical">
+            </li>
+            <li>
+                <a href="/#!/queries">Queries</a>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+    				{{global.user.name}} <b class="caret"></b>
+    			</a>
+                
+                <ul class="dropdown-menu">
+                    <li><a href="/signout">Signout</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </div>
