Fixed overrunning table under settings

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -29,6 +29,10 @@ textarea,
 input[type="email"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="url"], input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="time"], input[type="week"] {
   margin-bottom: 0; }
 
+.value-cell {
+  width: 85%;
+  word-break: break-all; }
+
 .newQuery td {
   background-color: rgba(48, 188, 174, 0.15); }
 
