--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -42,6 +42,11 @@ textarea,
 	margin-bottom: 0;
 }
 
+.value-cell {
+	width: 85%;
+	word-break: break-all;
+}
+
 .newQuery {
 	td {
 		background-color: transparentize($teal,.85);
