--- a/public/views/queries/index.html
+++ b/public/views/queries/index.html
@@ -13,7 +13,7 @@
         <tbody>
           <tr ng-repeat="settingsDataPair in settingsDataPairs">
             <td>{{settingsDataPair[0]}}</td>
-            <td>{{settingsDataPair[1]}}</td>
+            <td class="value-cell">{{settingsDataPair[1]}}</td>
           </tr>
         </tbody>
       </table>
